2008-03-05  David Smith  <dsmith@redhat.com>

	PR5422
	* systemtap.samples/examples.exp: Updated.

2008-03-03  Frank Ch. Eigler  <fche@elastic.org>

	PR5516
	* buildok/twentynine.stp: New test.

2008-02-27  Dave Brolley  <brolley@redhat.com>

	PR5189
	* systemtap.printf/bin6.{exp,stp}: New test case.
	* systemtap.printf/memory1.{exp,stp}: New test case.

2008-02-27  David Smith  <dsmith@redhat.com>

	* systemtap.base/marker.exp: Added better path to Module.markers.

2008-02-25  Frank Ch. Eigler  <fche@elastic.org>

	PR5792.
	* systemtap.base/preprocessor.exp: New test.

2008-02-23  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.printf/*.exp: Canonicalize pass/fail messages.

2008-02-23  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.samples/args.exp: Remove installation-specific paths from
	pass/fail judgements.

2008-02-23  Frank Ch. Eigler  <fche@elastic.org>

	* */*.exp: Change all "send \003" to "exec kill -INT -<pgrp>" in order
	to more reliably kill an inferior stap/stapio/staprun process group.

2008-02-22  Frank Ch. Eigler  <fche@elastic.org>

	* semko/fortyfive.stp: Add ".call" to exclude false (?) positives
	from inlined instances defined in header files.

2008-02-22  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/stmtvars.exp: New test for PR 5787.

2008-02-21  Will Cohen  <wcohen@redhat.com>

	* systemtap.base/beginenderror.exp: Increase timeout for slow machines.

2008-02-20  David Smith  <dsmith@redhat.com>

	* systemtap.base/marker.exp: Added tests for marker probe
	".format" component.

2008-02-19  Frank Ch. Eigler  <fche@elastic.org>

	PR5766.
	* semko/fortyfive.stp: New test.

2008-02-19  Frank Ch. Eigler  <fche@elastic.org>

	PR5771.
	* transko/one.stp: Remove, or rather, move to this ...
	* semko/zero.stp: new file.

2008-02-12  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.context/context.exp: Build temporary modules under
	build tree, to tolerate read-only source trees.
	* {args,backtrace,pid}.tcl: Corresponding changes.