@@ -1,3 +1,9 @@
+2008-03-10  Dave Brolley  <brolley@redhat.com>
+
+	PR5189
+	* systemtap.printf/memory1.{stp,exp}: Rewrite to reflect new %m safety checks.
+	* systemtap.stress/conversions.exp: Add a test for invalid argument to %m.
+
 2008-03-05  David Smith  <dsmith@redhat.com>
 
 	PR5422
@@ -30,7 +36,7 @@
 2008-02-23  Frank Ch. Eigler  <fche@elastic.org>
 
 	* systemtap.samples/args.exp: Remove installation-specific paths from
-	pass/fail judgements.
+	pass/fail judgements.<
 
 2008-02-23  Frank Ch. Eigler  <fche@elastic.org>
 
